// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`read csv should get X and y 1`] = `
Object {
  "fields": Array [
    Object {
      "buffer": Array [
        "",
        "2",
        "5",
        "",
      ],
      "config": Object {},
      "name": "Field 1",
      "type": "string",
    },
    Object {
      "buffer": Array [
        1,
        3,
        6,
        NaN,
      ],
      "config": Object {},
      "name": "Field 2",
      "type": "number",
    },
    Object {
      "buffer": Array [
        null,
        4,
        NaN,
        NaN,
      ],
      "config": Object {},
      "name": "Field 3",
      "type": "number",
    },
    Object {
      "buffer": Array [
        null,
        null,
        null,
        7,
      ],
      "config": Object {},
      "name": "Field 4",
      "type": "number",
    },
  ],
  "labels": undefined,
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;

exports[`read csv should read csv from local file system 1`] = `
Object {
  "fields": Array [
    Object {
      "buffer": Array [
        10,
        40,
      ],
      "config": Object {},
      "name": "a",
      "type": "number",
    },
    Object {
      "buffer": Array [
        20,
        50,
      ],
      "config": Object {},
      "name": "b",
      "type": "number",
    },
    Object {
      "buffer": Array [
        30,
        60,
      ],
      "config": Object {},
      "name": "c",
      "type": "number",
    },
  ],
  "labels": undefined,
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;

exports[`read csv should read csv with headers 1`] = `
Object {
  "fields": Array [
    Object {
      "buffer": Array [
        10,
        40,
        40,
        40,
      ],
      "config": Object {
        "unit": "ms",
      },
      "name": "a",
      "type": "number",
    },
    Object {
      "buffer": Array [
        20,
        50,
        500,
        50,
      ],
      "config": Object {
        "unit": "lengthm",
      },
      "name": "b",
      "type": "number",
    },
    Object {
      "buffer": Array [
        true,
        false,
        false,
        true,
      ],
      "config": Object {
        "unit": "s",
      },
      "name": "c",
      "type": "boolean",
    },
  ],
  "labels": undefined,
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;
